Fix archetype name wrapping on DeckTile

--- a/hsreplaynet/static/styles/components.scss
+++ b/hsreplaynet/static/styles/components.scss
@@ -250,6 +250,7 @@ table .info-icon {
 							line-height: 34px;
 							padding-left: 40px;
 							margin: 5px 0 0 5px;
+							white-space: pre;
 						}
 
 						.dust-cost {
